--- a/QuestPackages/daily/mining/obsidian/package.yml
+++ b/QuestPackages/daily/mining/obsidian/package.yml
@@ -7,8 +7,8 @@ variables:
   objective_amount: 16
   reward_amount: 5000
   
-  world: The_Ark_nether
-  world_display: Nether
+  world: Mining
+  world_display: Mining
 
   action_upper: Mine
   action_lower: mine
